@@ -1,35 +1,0 @@
-{
-  "attn_pdrop": 0.1,
-  "embd_pdrop": 0.1,
-  "finetuning_task": null,
-  "id2label": {
-    "0": "LABEL_0",
-    "1": "LABEL_1"
-  },
-  "initializer_range": 0.02,
-  "is_decoder": false,
-  "label2id": {
-    "LABEL_0": 0,
-    "LABEL_1": 1
-  },
-  "layer_norm_epsilon": 1e-05,
-  "n_ctx": 1024,
-  "n_embd": 1600,
-  "n_head": 25,
-  "n_layer": 48,
-  "n_positions": 1024,
-  "num_labels": 2,
-  "output_attentions": false,
-  "output_hidden_states": false,
-  "output_past": true,
-  "pruned_heads": {},
-  "resid_pdrop": 0.1,
-  "summary_activation": null,
-  "summary_first_dropout": 0.1,
-  "summary_proj_to_labels": true,
-  "summary_type": "cls_index",
-  "summary_use_proj": true,
-  "torchscript": false,
-  "use_bfloat16": false,
-  "vocab_size": 50257
-}
