@@ -1,110 +1,0 @@
-# coding=utf-8
-# Copyright 2018 The HuggingFace Inc. team.
-#
-# Licensed under the Apache License, Version 2.0 (the "License");
-# you may not use this file except in compliance with the License.
-# You may obtain a copy of the License at
-#
-#     http://www.apache.org/licenses/LICENSE-2.0
-#
-# Unless required by applicable law or agreed to in writing, software
-# distributed under the License is distributed on an "AS IS" BASIS,
-# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-# See the License for the specific language governing permissions and
-# limitations under the License.
-"""Convert OpenAI GPT checkpoint."""
-
-from __future__ import absolute_import, division, print_function
-
-import argparse
-from io import open
-
-import torch
-
-from transformers import (
-    CONFIG_NAME,
-    WEIGHTS_NAME,
-    GPT2Config,
-    GPT2Model,
-    load_tf_weights_in_gpt2,
-)
-
-import logging
-
-logging.basicConfig(level=logging.INFO)
-
-
-def convert_gpt2_checkpoint_to_pytorch(
-    gpt2_checkpoint_path, gpt2_config_file, pytorch_dump_folder_path
-):
-    # Construct model
-    if gpt2_config_file == "":
-        config = GPT2Config()
-    else:
-        config = GPT2Config.from_json_file(gpt2_config_file)
-    model = GPT2Model(config)
-
-    # Load weights from numpy
-    load_tf_weights_in_gpt2(model, config, gpt2_checkpoint_path)
-
-    # Save pytorch-model
-    pytorch_weights_dump_path = pytorch_dump_folder_path + "/" + WEIGHTS_NAME
-    pytorch_config_dump_path = pytorch_dump_folder_path + "/" + CONFIG_NAME
-    print("Save PyTorch model to {}".format(pytorch_weights_dump_path))
-    torch.save(model.state_dict(), pytorch_weights_dump_path)
-
-    print("Save configuration file to {}".format(pytorch_config_dump_path))
-    with open(pytorch_config_dump_path, "w", encoding="utf-8") as f:
-        f.write(config.to_json_string())
-
-    # Also save as half precision to save transfer, loading, and inference time and memory
-    pytorch_weights_dump_path += 'half'
-    model.half()
-    torch.save(model.state_dict(), pytorch_weights_dump_path)
-    with open(pytorch_config_dump_path, "w", encoding="utf-8") as f:
-        f.write(config.to_json_string())
-    print("Save configuration file to {}".format(pytorch_config_dump_path))
-
-
-if __name__ == "__main__":
-    parser = argparse.ArgumentParser()
-    ## Required parameters
-    parser.add_argument(
-        "--gpt2_checkpoint_path",
-        default=None,
-        type=str,
-        required=True,
-        help="Path to the TensorFlow checkpoint path.",
-    )
-    parser.add_argument(
-        "--pytorch_dump_folder_path",
-        default=None,
-        type=str,
-        required=True,
-        help="Path to the output PyTorch model.",
-    )
-    parser.add_argument(
-        "--gpt2_config_file",
-        default="",
-        type=str,
-        help="An optional config json file corresponding to the pre-trained OpenAI model. \n"
-        "This specifies the model architecture.",
-    )
-    args = parser.parse_args()
-    convert_gpt2_checkpoint_to_pytorch(
-        args.gpt2_checkpoint_path, args.gpt2_config_file, args.pytorch_dump_folder_path
-    )
-
-
-"""
-download aidungeon2 v5 model from this torrent or elsewhere
--  magnet:?xt=urn:btih:b343b83b35bff774dab13e0281ce13b3daf37d3e&dn=model_v5&tr=udp%3a%2f%2ftracker.coppersurfer.tk%3a6969%2fannounce&tr=udp%3a%2f%2ftracker.leechers-paradise.org%3a6969%2fannounce
-export OPENAI_GPT2_CHECKPOINT_PATH=../generator/gpt2/models/model_v5
-export PYTORCH_DUMP_OUTPUT=../generator/gpt2/models/model_v5_pytorch
-python convert_gpt2_model.py \
-    --gpt2_checkpoint_path $OPENAI_GPT2_CHECKPOINT_PATH \
-    --pytorch_dump_folder_path $PYTORCH_DUMP_OUTPUT \
-    --gpt2_config_file ./aidungeonv2_model_v5_config.json
-wget https://s3.amazonaws.com/models.huggingface.co/bert/gpt2-xl-merges.txt -o $PYTORCH_DUMP_OUTPUT/merges.txt
-wget https://s3.amazonaws.com/models.huggingface.co/bert/gpt2-xl-vocab.json -o $PYTORCH_DUMP_OUTPUT/vocab.json
-"""
